@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<!-- This file is part of Coog. The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<form>
+    <label name="cancel_reason"/>
+    <field name="cancel_reason" widget="selection"/>
+</form>
