@@ -1,3 +1,4 @@
+* BUG#8851 Allow to select the cancel reason when cancelling an indemnification
 * BUG#8916 Can't refuse an indemnification : alert on note missing is always displayed
 * BUG#8808 Allow mid-day indemnification period cuts when checking schedulability
 
